SIS/force-app/main/default/objects/Parent_Lead__c/Parent_Lead__c.object-meta.xml
<CustomObject>
    <label>Parent Lead</label>
    <nameField>
        <label>Parent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parent Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>