SIS/force-app/main/default/objects/Parent_Lead__c/fields/Citizenship__c.field-meta.xml
<CustomField>
    <fullName>Citizenship__c</fullName>
    <formula>IF(
    ISPICKVAL(Nationality__c, &quot;&quot;), 
    &quot; &quot;, 
    IF(ISPICKVAL(Nationality__c, &quot;MY&quot;), &quot;MALAYSIAN&quot;, &quot;NON-CITIZEN&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Citizenship</label>
    <type>Text</type>
</CustomField>