SIS/force-app/main/default/objects/Parent_Lead__c/fields/Mobile_Number_1__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number_1__c</fullName>
    <label>Mobile Number 1</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>