SIS/force-app/main/default/objects/Parent_Lead__c/fields/Mobile_Number_2__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number_2__c</fullName>
    <label>Mobile Number 2</label>
    <type>Phone</type>
</CustomField>