SIS/force-app/main/default/objects/Parent_Lead__c/fields/Mobile_Number_3__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number_3__c</fullName>
    <label>Mobile Number 3</label>
    <type>Phone</type>
</CustomField>