SIS/force-app/main/default/objects/Parent_Lead__c/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <label>Nationality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nationality</valueSetName>
    </valueSet>
</CustomField>