SIS/force-app/main/default/objects/Parent_Lead__c/fields/Passport_IC__c.field-meta.xml
<CustomField>
    <fullName>Passport_IC__c</fullName>
    <label>Passport/ IC</label>
    <length>20</length>
    <type>Text</type>
</CustomField>