SIS/force-app/main/default/objects/Parent_Lead__c/fields/Phone_Company__c.field-meta.xml
<CustomField>
    <fullName>Phone_Company__c</fullName>
    <label>Phone (Company)</label>
    <type>Phone</type>
</CustomField>