SIS/force-app/main/default/objects/Parent_Lead__c/fields/Preferred_Phone_Value__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Phone_Value__c</fullName>
    <formula>CASE(
    TEXT(Preferred_Phone_Number__c),
    &quot;MOBILE PHONE 1&quot;, Mobile_Number_1__c,
    &quot;MOBILE PHONE 2&quot;, Mobile_Number_2__c,
    &quot;MOBILE PHONE 3&quot;, Mobile_Number_3__c,
    Mobile_Number_1__c  
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred Phone Value</label>
    <type>Text</type>
</CustomField>