SIS/force-app/main/default/objects/Parent_Lead__c/validationRules/SIS_Passport_Expiry_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>SIS_Passport_Expiry_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK( Passport_Expiry__c )),
     Passport_Expiry__c &lt;= TODAY()
)</errorConditionFormula>
    <errorMessage>Passport Expiry Date must be a future date.</errorMessage>
</ValidationRule>