SIS/force-app/main/default/objects/Parent_Lead__c/validationRules/SIS_Phone_Format_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>SIS_Phone_Format_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Phone_Company__c)),
  NOT(REGEX(Phone_Company__c,&quot;^\\+?[0-9]{10,12}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Phone_Company__c</errorDisplayField>
    <errorMessage>Enter a valid number with 10 to 12 digits.</errorMessage>
</ValidationRule>