SIS/force-app/main/default/objects/Parent_Lead__c/validationRules/SIS_Postcode_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>SIS_Postcode_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK( Postcode__c )),  
    NOT(REGEX( Postcode__c , &quot;^[0-9]+$&quot;))  
)</errorConditionFormula>
    <errorDisplayField>Postcode__c</errorDisplayField>
    <errorMessage>Postcode should contain only numbers.</errorMessage>
</ValidationRule>