SIS/force-app/main/default/objects/Parent_Lead__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Campus__c</columns>
    <columns>Email__c</columns>
    <columns>Preferred_Phone_Value__c</columns>
    <columns>Passport_IC__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>