SIS/force-app/main/default/objects/Parent_Lead__c/listViews/UAT_1_Leads.listView-meta.xml
<ListView>
    <fullName>UAT_1_Leads</fullName>
    <columns>NAME</columns>
    <columns>Gender__c</columns>
    <columns>Email__c</columns>
    <columns>Mobile_Number_1__c</columns>
    <columns>Mobile_Number_2__c</columns>
    <columns>Mobile_Number_3__c</columns>
    <columns>Nationality__c</columns>
    <columns>Parent_Relationship__c</columns>
    <columns>Passport_IC__c</columns>
    <columns>Passport_Expiry__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>4/21/2025 12:00 AM</value>
    </filters>
    <label>UAT 1 Leads</label>
</ListView>